# object_detection

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 12e698b6e589_initial_tables.py
counter/: config.py
counter/adapters/: count_repo.py  object_detector.py  sql_models.py
counter/domain/: actions.py  models.py  predictions.py
counter/entrypoints/: main.py  webapp.py
counter/helper/: logger.py
scripts/: download_models.sh
tests/domain/: helpers.py  test_actions.py
tests/entrypoints/: test_webapp.py
tests/integration/: test_mongo_counter.py  test_sql_counter.py
tmp/: .gitignore
