[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.0",
    "Pillow==11.3.0",
    "requests==2.32.4",
    "pymongo==4.13.2",
    "Flask==3.1.1",
    "sqlalchemy>=2.0.48",
    "pydantic>=2.12.5",
]
[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest==8.4.1",
]
